Fixed bug whene overflowing lists couldn't add cards

--- a/src/components/body/style.css
+++ b/src/components/body/style.css
@@ -1,6 +1,7 @@
 .cards-lists {
   flex-direction: row;
   width: 95%;
+  height: 77vh;
   margin: auto;
   overflow: auto;
 }
